# Python-M3GP

./: .gitignore  Arguments.py  EULA.txt  Main_M3GP.py  Main_M3GP_classification_example.py  Main_M3GP_example.py  Main_M3GP_regression_example.py  Main_M3GP_standalone.py  README.txt  pyproject.toml  requirements.txt  setup.cfg  update.sh
.github/workflows/: publish-to-pypi.yaml
datasets/: boom_bikes.csv  heart.csv
m3gp/: Constants.py  EuclideanDistanceClassifier.py  GeneticOperators.py  Individual.py  M3GP.py  MahalanobisDistanceClassifier.py  Node.py  Population.py  Util.py  __init__.py
