[project]
name = "M3GP"
version = "0.0.1"
description = "Python implementation of M3GP"
authors = [
    "João Batista <jebatista@ciencias.ulisboa.pt>"
]
readme = "README.md"
python = "^3.8"
homepage = "https://github.com/jespb/Python-M3GP"
repository = "https://github.com/jespb/Python-M3GP"
documentation = "https://github.com/jespb/Python-M3GP"

[project.license]
text = "https://opensource.org/licenses/MIT"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 43.0.0',
]
