[project]
name = "M3GP"
version = "1.1.3"
description = "Python implementation of M3GP"
authors = [
    { name = "João Batista", email = "joao.batista@riken.jp" }
]
readme = "README.md"
requires-python = "~=3.8"

[tool.pypi-publish]
repository = "pypi"

[project.urls]
homepage = "https://github.com/jespb/Python-M3GP"
repository = "https://github.com/jespb/Python-M3GP"
documentation = "https://github.com/jespb/Python-M3GP"

[project.license]
text = "https://opensource.org/licenses/MIT"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 43.0.0',
]
