[metadata]
name = M3GP
version = 0.0.8
author = João Batista
author_email = me@alcidesfonseca.com
description = Python framework that implements M3GP.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jespb/Python-M3GP
project_urls =
    Bug Tracker = https://github.com/jespb/Python-M3GP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .